# Trade-App

./: .env.example  .gitignore  README.md  docker-compose.yml  index.css  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: deploy.yml
backend/: Dockerfile  pyproject.toml
backend/src/: __init__.py  config.py  main.py
backend/src/routers/: analyze.py  health.py
backend/src/services/: data_pipeline.py  fetcher.py  indicators.py  shioaji_fetcher.py  yahoo_fetcher.py
frontend/: Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: DataSourceSelector.tsx  DownloadButton.tsx  IndicatorSelector.tsx  ResultsTable.tsx  StockChart.tsx  StockInput.tsx
frontend/src/types/: index.ts
public/: template.xlsx
src/: App.tsx  index.css
src/components/: AiComparisonTable.tsx  AiProviderBadge.tsx  DownloadButton.tsx  IndicatorSelector.tsx  LanguageSwitcher.tsx  Navbar.tsx  ResultsPanel.tsx  SettingsPage.tsx  StockCard.tsx  StockChart.tsx  StockInput.tsx
src/hooks/: useAiAnalysis.ts  useAnalysis.ts  useApiKeys.ts
src/i18n/: context.tsx  en.ts  zh-TW.ts
src/services/: excelParser.ts  indicators.ts  yahoo.ts
src/services/ai/: claude.ts  gemini.ts  grok.ts  openai.ts  runner.ts  types.ts
src/types/: index.ts
src/utils/: buildPrompt.ts
