[project]
name = "royabot-backend"
version = "1.0.0"
description = "RoyaBot Web Edition — Taiwan Stock Analysis Backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0",
    "python-multipart>=0.0.9",
    "shioaji>=1.0.0",
    "yfinance>=0.2.40",
    "polars>=1.10.0",
    "pyarrow>=17.0.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "ta-lib>=0.4.0",
    "openpyxl>=3.1.0",
    "python-dateutil>=2.9.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.ruff]
line-length = 100
target-version = "py310"